server/7.6/search/field-data-types-reference.md
---
title: Field Data Types
description: You can assign a data type to a field to tell the Search Service
  how to analyze its data.
pubDate: 2026-08-17T09:53:44.266Z
antora:
  editUrl: https://github.com/couchbaselabs/docs-devex/edit/release/7.6/modules/search/pages/field-data-types-reference.adoc
  xref: xref:7.6@server:search:field-data-types-reference.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/server/7.6/search/field-data-types-reference.html)

# Field Data Types

> You can assign a data type to a field to tell the Search Service how to analyze its data. 

When you [create a child field](create-child-field.md) on a type mapping or [Create a Search Index with the Quick Editor](create-quick-index.md), you need to set a field's data type.

If you create a Search index and do not set a data type for a field, the Search Service automatically assigns a field data type. For example, if you created a [dynamic type mapping](customize-index.md#type-mappings), the Search Service automatically assigns data types to all fields in the type mapping.

The following field data types are available:

| Field Data Type                                 | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| ----------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| text                                            | The field contains a string. The string can contain numbers and special characters.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| number                                          | The field contains a number. It does not contain any alphabetic characters.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| datetime                                        | The field contains a date/time value that matches the format of a [Date/Time Parser](customize-index.md#date-time) in the index.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| boolean                                         | The field contains a true or false value.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| disabled                                        | This field data type is deprecated. It's included for compatibility only.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| geopoint                                        | The field contains geopoint (latitude and longitude) data, represented as either: A string, as two numeric values separated by a comma. A string, as a geohash point. An array, as two floating point integers. A JSON object, with the properties lon/lng and lat.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| geoshape                                        | The field contains a GeoJSON object. A GeoJSON object describes a shape made of floating point coordinates with the following JSON properties: A type string, for the type of GeoJSON object. For example, a point or MultiLineString. A coordinates array of floating point numbers, for each latitude and longitude coordinate point in the GeoJSON shape. For example: {     "type": "LineString",     "coordinates": \[         \[-2.753735609842721, 53.94860827535115\],         \[-2.599898256093695,53.65007434185782\]     \] } This JSON object describes a LineString GeoJSON object with 2 latitude and longitude coordinates. For more information about GeoJSON queries, see [the Query object](search-request-params.md#query-object). |
| ip                                              | The field contains an IP address, formatted in IPv4 or IPv6 CIDR syntax. For example: {     "ipv4": "4.7.44.162",     "ipv6": "2001:4800:0000:0000:0000:0000:0000:0000" }                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| vector                                          | The field contains an array of floating point numbers or an array of arrays that represent a vector embedding. Use the vector type to perform vector similarity searches with Vector Search. For more information about Vector Search, see [Use Vector Search for AI Applications](../vector-search/vector-search.md).                                                                                                                                                                                                                                                                                                                                                                                                                                |
| (Server version 7.6.2 and later) vector\_base64 | The field contains an array of floating point numbers formatted as a base64 encoded string that represent a vector embedding. Use the vector\_base64 type to perform vector similarity searches with Vector Search. For more information about Vector Search, see [Use Vector Search for AI Applications](../vector-search/vector-search.md).                                                                                                                                                                                                                                                                                                                                                                                                         |